--- a/pages/personaggi.html
+++ b/pages/personaggi.html
@@ -29,12 +29,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS Personalizzato -->
-    <link rel="stylesheet" href="../../style/style.css"/>
+    <link rel="stylesheet" href="./../style/style.css"/>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
     <title>Dragon Ball Universe</title>
@@ -43,14 +43,14 @@
     <!-- Header -->
     <header class="bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="../../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
+            <img src="./../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
         </div>
     </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a href="../index.html"> <img src="../../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
+            <a href="../index.html"> <img src="./../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -112,7 +112,7 @@
                 <!-- Card Goku -->
                 <div class="col">
                     <div class="card h-100">
-                        <img src="../../images/personaggi/goku.png" class="card-img-top" alt="Goku">
+                        <img src="./../images/personaggi/goku.png" class="card-img-top" alt="Goku">
                         <div class="card-body">
                             <h5 class="card-title">Goku</h5>
                             <p class="card-text">Il protagonista della saga, un guerriero Saiyan sempre pronto a combattere per proteggere la Terra.</p>
@@ -124,7 +124,7 @@
                 <!-- Card Vegeta -->
                 <div class="col">
                     <div class="card h-100">
-                        <img src="../../images/personaggi/vegeta.png" class="card-img-top" alt="Vegeta">
+                        <img src="./../images/personaggi/vegeta.png" class="card-img-top" alt="Vegeta">
                         <div class="card-body">
                             <h5 class="card-title">Vegeta</h5>
                             <p class="card-text">Il principe dei Saiyan, un guerriero orgoglioso e potente.</p>
@@ -136,7 +136,7 @@
                 <!-- Card Gohan -->
                 <div class="col">
                     <div class="card h-100">
-                        <img src="../../images/personaggi/gohan.png" class="card-img-top" alt="Gohan">
+                        <img src="./../images/personaggi/gohan.png" class="card-img-top" alt="Gohan">
                         <div class="card-body">
                             <h5 class="card-title">Gohan</h5>
                             <p class="card-text">Il figlio di Goku, un guerriero Saiyan dal grande potenziale e un cuore puro.</p>
@@ -153,7 +153,7 @@
                 <!-- Card Freezer -->
                 <div class="col">
                     <div class="card h-100 border-danger">
-                        <img src="../../images/personaggi/freezer.png" class="card-img-top" alt="Freezer">
+                        <img src="./../images/personaggi/freezer.png" class="card-img-top" alt="Freezer">
                         <div class="card-body">
                             <h5 class="card-title">Freezer</h5>
                             <p class="card-text">Uno dei più grandi antagonisti della saga, spietato e potente.</p>
@@ -165,7 +165,7 @@
                 <!-- Card Cell -->
                 <div class="col">
                     <div class="card h-100 border-danger">
-                        <img src="../../images/personaggi/cell.png" class="card-img-top" alt="Cell">
+                        <img src="./../images/personaggi/cell.png" class="card-img-top" alt="Cell">
                         <div class="card-body">
                             <h5 class="card-title">Cell</h5>
                             <p class="card-text">Un bioandroide creato per essere perfetto, una minaccia senza pari.</p>
@@ -177,7 +177,7 @@
                 <!-- Card Majin Bu -->
                 <div class="col">
                     <div class="card h-100 border-danger">
-                        <img src="../../images/personaggi/majin.png" class="card-img-top" alt="Majin Bu">
+                        <img src="./../images/personaggi/majin.png" class="card-img-top" alt="Majin Bu">
                         <div class="card-body">
                             <h5 class="card-title">Majin Bu</h5>
                             <p class="card-text">Un essere magico con poteri illimitati e personalità mutevole.</p>
@@ -211,14 +211,14 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <img src="../../images/personaggi/goku.png"  width="50%" height="50%" class="img-fluid rounded mb-3 " alt="Goku Super Saiyan">
+            <img src="./../images/personaggi/goku.png"  width="50%" height="50%" class="img-fluid rounded mb-3 " alt="Goku Super Saiyan">
             <p>Goku è il protagonista della saga di Dragon Ball, un guerriero Saiyan cresciuto sulla Terra. Con un cuore puro e una forza straordinaria, Goku protegge il pianeta e i suoi amici da numerose minacce.</p>
             <p><strong>Origine:</strong> Saiyan</p>
             <p><strong>Trasformazioni:</strong></p>
             <select class="form-select mb-3">
                 <option selected>Super Saiyan</option>
             </select>
-            <img src="../../images/personaggi/gokussj.png" class="img-fluid rounded mb-3" width="50%" height="50%" alt="Goku Super Saiyan">
+            <img src="./../images/personaggi/gokussj.png" class="img-fluid rounded mb-3" width="50%" height="50%" alt="Goku Super Saiyan">
         </div>
     </div>
 
