--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS Personalizzato -->
-    <link rel="stylesheet" href="../style/style.css"/>
+    <link rel="stylesheet" href="./style/style.css"/>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
 
     <title>Dragon Ball Universe</title>
 </head>
@@ -45,14 +45,14 @@
     <!-- Header -->
     <header class="bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
+            <img src="./images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
         </div>
     </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a href="index.html"> <img src="../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
+            <a href="index.html"> <img src="./images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -86,7 +86,7 @@
     <!-- Introduzione -->
     <section class="row align-items-center mb-5">
         <div class="col-md-6">
-            <img src="../images/personaggi/gokuindex.png" width="60%" class="img-fluid rounded shadow" alt="Immagine Progetto">
+            <img src="./images/personaggi/gokuindex.png" width="60%" class="img-fluid rounded shadow" alt="Immagine Progetto">
         </div>
         <div class="col-md-6">
             <h2>Il Progetto</h2>
@@ -115,7 +115,7 @@
                 <div class="carousel-item active">
                     <div class="row align-items-center">
                         <div class="col-md-6">
-                            <img src="../images/fumetti/23super.jpg" width="40%" class="img-fluid rounded shadow mx-auto d-block" alt="Dragon Ball Super Nuovo Capitolo">
+                            <img src="./images/fumetti/23super.jpg" width="40%" class="img-fluid rounded shadow mx-auto d-block" alt="Dragon Ball Super Nuovo Capitolo">
                         </div>
                         <div class="col-md-6">
                             <div class="px-4">
@@ -131,7 +131,7 @@
                 <div class="carousel-item">
                     <div class="row align-items-center">
                         <div class="col-md-6">
-                            <img src="../images/fumetti/ep15.jpg" width="60%" class="img-fluid rounded shadow mx-auto d-block" alt="Dragon Ball Daima Nuova Puntata">
+                            <img src="./images/fumetti/ep15.jpg" width="60%" class="img-fluid rounded shadow mx-auto d-block" alt="Dragon Ball Daima Nuova Puntata">
                         </div>
                         <div class="col-md-6">
                             <div class="px-4">
@@ -147,7 +147,7 @@
                 <div class="carousel-item">
                     <div class="row align-items-center">
                         <div class="col-md-6">
-                            <img src="../images/personaggi/gokussj4.png" width="40%" class="img-fluid rounded shadow mx-auto d-block" alt="Goku SSJ4">
+                            <img src="./images/personaggi/gokussj4.png" width="40%" class="img-fluid rounded shadow mx-auto d-block" alt="Goku SSJ4">
                         </div>
                         <div class="col-md-6">
                             <div class="px-4">
@@ -183,7 +183,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <img src="../images/altre/akira.jpg" class="img-fluid rounded shadow text-center" alt="Foto Akira Toryama">
+                    <img src="./images/altre/akira.jpg" class="img-fluid rounded shadow text-center" alt="Foto Akira Toryama">
                     <p>
                         <strong>Akira Toriyama</strong> (5 aprile 1955 - 1 marzo 2024) è stato uno dei più grandi fumettisti giapponesi della storia, noto per aver creato <em>Dragon Ball</em>, una delle serie manga e anime più iconiche di tutti i tempi. 
 
