--- a/pages/anime.html
+++ b/pages/anime.html
@@ -29,12 +29,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS Personalizzato -->
-    <link rel="stylesheet" href="../../style/style.css"/>
+    <link rel="stylesheet" href="./../style/style.css"/>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../favicon/favicon-16x16.png">
     <link rel="manifest" href="../site.webmanifest">
 
     <title>Dragon Ball Universe</title>
@@ -43,14 +43,14 @@
     <!-- Header -->
     <header class="bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="../../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
+            <img src="./../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
         </div>
     </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a href="../index.html"> <img src="../../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
+            <a href="../index.html"> <img src="./../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -95,7 +95,7 @@
         <section class="text-center mb-5 bg-light py-4">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../images/anime/d1.jpg" class="img-fluid rounded rounded shadow" alt="Dragon Ball">
+                    <img src="./../images/anime/d1.jpg" class="img-fluid rounded rounded shadow" alt="Dragon Ball">
                 </div>
                 <div class="col-md-6 d-flex align-items-center">
                     <div>
@@ -111,7 +111,7 @@
         <section class="text-center mb-5 bg-light py-4">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../images/anime/dz.jpg" class="img-fluid rounded shadow" alt="Dragon Ball Z">
+                    <img src="./../images/anime/dz.jpg" class="img-fluid rounded shadow" alt="Dragon Ball Z">
                 </div>
                 <div class="col-md-6 d-flex align-items-center">
                     <div>
@@ -127,7 +127,7 @@
         <section class="text-center mb-5 bg-light py-4">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../images/anime/dgt.jpg" class="img-fluid rounded shadow" alt="Dragon Ball GT">
+                    <img src="./../images/anime/dgt.jpg" class="img-fluid rounded shadow" alt="Dragon Ball GT">
                 </div>
                 <div class="col-md-6 d-flex align-items-center">
                     <div>
@@ -143,7 +143,7 @@
         <section class="text-center mb-5 bg-light py-4">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../images/anime/ds.jpg" class="img-fluid rounded shadow" alt="Dragon Ball Super">
+                    <img src="./../images/anime/ds.jpg" class="img-fluid rounded shadow" alt="Dragon Ball Super">
                 </div>
                 <div class="col-md-6 d-flex align-items-center">
                     <div>
@@ -159,7 +159,7 @@
         <section class="text-center mb-5 bg-light py-4">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../images/anime/dd.jpg" class="img-fluid rounded shadow" alt="Dragon Ball Daima">
+                    <img src="./../images/anime/dd.jpg" class="img-fluid rounded shadow" alt="Dragon Ball Daima">
                 </div>
                 <div class="col-md-6 d-flex align-items-center">
                     <div>
@@ -180,7 +180,7 @@
                     <!-- Film 1 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/anime/dbbroly.jpeg" class="card-img-top" alt="Dragon Ball Super: Broly">
+                            <img src="./../images/anime/dbbroly.jpeg" class="card-img-top" alt="Dragon Ball Super: Broly">
                             <div class="card-body">
                                 <h5 class="card-title">Dragon Ball Super: Broly</h5>
                                 <p class="card-text">La storia di Broly, il leggendario Super Saiyan, in un film mozzafiato.</p>
@@ -192,7 +192,7 @@
                     <!-- Film 2 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/anime/frez.jpg" class="card-img-top" alt="Resurrection F">
+                            <img src="./../images/anime/frez.jpg" class="card-img-top" alt="Resurrection F">
                             <div class="card-body">
                                 <h5 class="card-title">Resurrection F</h5>
                                 <p class="card-text">Freezer ritorna con una vendetta nella Terra per sfidare Goku e i suoi amici.</p>
@@ -204,7 +204,7 @@
                     <!-- Film 3 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/anime/bgods.jpg" class="card-img-top" alt="Battle of Gods">
+                            <img src="./../images/anime/bgods.jpg" class="card-img-top" alt="Battle of Gods">
                             <div class="card-body">
                                 <h5 class="card-title">Battle of Gods</h5>
                                 <p class="card-text">La battaglia contro Beerus, il Dio della Distruzione, che introduce nuovi livelli di potenza.</p>
