--- a/pages/item-1.html
+++ b/pages/item-1.html
@@ -29,11 +29,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS Personalizzato -->
-    <link rel="stylesheet" href="../../style/style.css"/>
+    <link rel="stylesheet" href="./../style/style.css"/>
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="../../favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../../favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../../favicon/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./../favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./../favicon/favicon-16x16.png">
         <link rel="manifest" href="../site.webmanifest">
 
     <title>Dragon Ball Universe</title>
@@ -42,14 +42,14 @@
     <!-- Header -->
     <header class="bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="../../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
+            <img src="./../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
         </div>
     </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a href="../index.html"> <img src="../../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
+            <a href="../index.html"> <img src="./../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -99,7 +99,7 @@
                     <div id="carouselVolume23" class="carousel slide border border-5 w-100" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../../images/fumetti/23super.jpg" class="d-block mx-auto w-50 h-50" style="object-fit: contain;" alt="Copertina Volume 23">
+                                <img src="./../images/fumetti/23super.jpg" class="d-block mx-auto w-50 h-50" style="object-fit: contain;" alt="Copertina Volume 23">
                             </div>
                         </div>
                         <button class="carousel-control-next" type="button" data-bs-target="#carouselVolume23" data-bs-slide="next">
@@ -156,7 +156,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="../../images/fumetti/22super.jpg" class="card-img-top" alt="Volume 22">
+                        <img src="./../images/fumetti/22super.jpg" class="card-img-top" alt="Volume 22">
                         <div class="card-body">
                             <h5 class="card-title">Dragon Ball Super Volume 22</h5>
                             <a href="item-1.html#" class="btn btn-primary">Scopri di più</a>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="../../images/fumetti/21super.jpg" class="card-img-top" alt="Volume 21">
+                        <img src="./../images/fumetti/21super.jpg" class="card-img-top" alt="Volume 21">
                         <div class="card-body">
                             <h5 class="card-title">Dragon Ball Super Volume 21</h5>
                             <a href="item-1.html#" class="btn btn-primary">Scopri di più</a>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="../../images/fumetti/20super.jpg" class="card-img-top" alt="Volume 20">
+                        <img src="./../images/fumetti/20super.jpg" class="card-img-top" alt="Volume 20">
                         <div class="card-body">
                             <h5 class="card-title">Dragon Ball Super Volume 20</h5>
                             <a href="item-1.html#" class="btn btn-primary">Scopri di più</a>
