--- a/pages/manga.html
+++ b/pages/manga.html
@@ -29,12 +29,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS Personalizzato -->
-    <link rel="stylesheet" href="../../style/style.css"/>
+    <link rel="stylesheet" href="./../style/style.css"/>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../favicon/favicon-16x16.png">
     <link rel="manifest" href="../site.webmanifest">
 
     <title>Dragon Ball Universe</title>
@@ -43,14 +43,14 @@
     <!-- Header -->
     <header class="bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="../../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
+            <img src="./../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
         </div>
     </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a href="../index.html"> <img src="../../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
+            <a href="../index.html"> <img src="./../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -272,7 +272,7 @@
                     <!-- Card 1 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/fumetti/23super.jpg" class="card-img-top" alt="Dragon Ball Volume 1">
+                            <img src="./../images/fumetti/23super.jpg" class="card-img-top" alt="Dragon Ball Volume 1">
                             <div class="card-body">
                                 <h5 class="card-title">Dragon Ball Super Volume 23</h5>
 
@@ -284,7 +284,7 @@
                     <!-- Card 2 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/fumetti/dragonballz1.jpg" class="card-img-top" alt="Dragon Ball Z Volume 1">
+                            <img src="./../images/fumetti/dragonballz1.jpg" class="card-img-top" alt="Dragon Ball Z Volume 1">
                             <div class="card-body">
                                 <h5 class="card-title">Dragon Ball Z Volume 1</h5>
 
@@ -296,7 +296,7 @@
                     <!-- Card 3 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/fumetti/super1.jpg" class="card-img-top" alt="Dragon Ball Super Volume 1">
+                            <img src="./../images/fumetti/super1.jpg" class="card-img-top" alt="Dragon Ball Super Volume 1">
                             <div class="card-body">
                                 <h5 class="card-title">Dragon Ball Super Volume 1</h5>
                                 <a href="#" class="btn btn-primary">Dettagli</a>
@@ -307,7 +307,7 @@
                     <!-- Card 4 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/fumetti/gt1.jpg" class="card-img-top" alt="Dragon Ball GT Volume 1">
+                            <img src="./../images/fumetti/gt1.jpg" class="card-img-top" alt="Dragon Ball GT Volume 1">
                             <div class="card-body">
                                 <h5 class="card-title">Dragon Ball GT Volume 1</h5>
                                 <a href="#" class="btn btn-primary">Dettagli</a>
@@ -318,7 +318,7 @@
                     <!-- Card 5 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/fumetti/dragonball5.jpg" class="card-img-top" alt="Dragon Ball Volume 5">
+                            <img src="./../images/fumetti/dragonball5.jpg" class="card-img-top" alt="Dragon Ball Volume 5">
                             <div class="card-body">
                                 <h5 class="card-title">Dragon Ball Volume 5</h5>
                                 <a href="#" class="btn btn-primary">Dettagli</a>
@@ -329,7 +329,7 @@
                     <!-- Card 6 -->
                     <div class="col">
                         <div class="card h-100">
-                            <img src="../../images/fumetti/super6.jpeg" class="card-img-top" alt="Dragon Ball Volume 6">
+                            <img src="./../images/fumetti/super6.jpeg" class="card-img-top" alt="Dragon Ball Volume 6">
                             <div class="card-body">
                                 <h5 class="card-title">Dragon Ball Super Volume 6</h5>
                                 <a href="#" class="btn btn-primary">Dettagli</a>
