--- a/pages/ultime_uscite.html
+++ b/pages/ultime_uscite.html
@@ -30,13 +30,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS Personalizzato -->
-    <link rel="stylesheet" href="../../style/style.css"/>
+    <link rel="stylesheet" href="./../style/style.css"/>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
 
     <title>Dragon Ball Universe</title>
 </head>
@@ -44,14 +44,14 @@
     <!-- Header -->
     <header class="bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="../../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
+            <img src="./../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
         </div>
     </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a href="../index.html"> <img src="../../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
+            <a href="../index.html"> <img src="./../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -96,7 +96,7 @@
         <!-- Immagine e dettagli -->
         <section class="row mb-5">
             <div class="col-md-6">
-                <img src="../../images/altre/spzero.jpg" class="img-fluid rounded" alt="Dragon Ball Z: Sparking Zero Cover">
+                <img src="./../images/altre/spzero.jpg" class="img-fluid rounded" alt="Dragon Ball Z: Sparking Zero Cover">
             </div>
             <div class="col-md-6 d-flex align-items-center">
                 <div>
