--- a/pages/webprojectplan.html
+++ b/pages/webprojectplan.html
@@ -30,12 +30,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS Personalizzato -->
-    <link rel="stylesheet" href="../../style/style.css"/>
+    <link rel="stylesheet" href="./../style/style.css"/>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../favicon/favicon-16x16.png">
     <link rel="manifest" href="../site.webmanifest">
 
     <title>Dragon Ball Universe</title>
@@ -44,14 +44,14 @@
     <!-- Header -->
     <header class="bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="../../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
+            <img src="./../images/altre/logoheader.png" class="img-fluid" alt="Dragon Ball Universe Logo">
         </div>
     </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a href="../index.html"> <img src="../../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
+            <a href="../index.html"> <img src="./../images/altre/logo.png" width="20%" class="img-fluid ms-3" alt="Immagine Progetto"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -215,7 +215,7 @@
          <section id="mappa-concettuale" class="mb-5">
             <h3>4.1 Mappa concettuale</h3>
             <div class="text-center">
-                <img src="../../images/altre/MappaConcettuale.png" class="img-fluid border shadow-sm" alt="Mappa Concettuale">
+                <img src="./../images/altre/MappaConcettuale.png" class="img-fluid border shadow-sm" alt="Mappa Concettuale">
             </div>
             <p class="mt-3">
                 Il progetto è suddiviso in quattro sezioni principali: <strong>Manga</strong>, <strong>Anime</strong>, <strong>Videogiochi</strong> e <strong>Personaggi</strong>. 
@@ -231,7 +231,7 @@
         <section id="schema-dipendenze" class="mb-5">
             <h3>4.2 Schema delle dipendenze</h3>
             <div class="text-center">
-                <img src="../../images/altre/Dipendenze.png" class="img-fluid border shadow-sm" alt="Schema delle Dipendenze">
+                <img src="./../images/altre/Dipendenze.png" class="img-fluid border shadow-sm" alt="Schema delle Dipendenze">
             </div>
             <p class="mt-3">
                 La <strong>homepage</strong> rappresenta il punto di accesso principale al sito e permette una navigazione immediata verso le quattro categorie principali:
@@ -297,31 +297,31 @@
             <div class="carousel-inner text-center">
                 <div class="carousel-item active">
                     <h4 class="mb-3">Homepage</h4>
-                    <img src="../../images/Wireframes/Homepage.png" class="d-block w-100" alt="Wireframe Homepage">
+                    <img src="./../images/Wireframes/Homepage.png" class="d-block w-100" alt="Wireframe Homepage">
                 </div>
                 <div class="carousel-item">
                     <h4 class="mb-3">Manga</h4>
-                    <img src="../../images/Wireframes/Manga.png" class="d-block w-100" alt="Wireframe Manga">
+                    <img src="./../images/Wireframes/Manga.png" class="d-block w-100" alt="Wireframe Manga">
                 </div>
                 <div class="carousel-item">
                     <h4 class="mb-3">Item</h4>
-                    <img src="../../images/Wireframes/Item.png" class="d-block w-100" alt="Wireframe Item">
+                    <img src="./../images/Wireframes/Item.png" class="d-block w-100" alt="Wireframe Item">
                 </div>
                 <div class="carousel-item">
                     <h4 class="mb-3">Videogioco</h4>
-                    <img src="../../images/Wireframes/Videogioco.png" class="d-block w-100" alt="Wireframe Videogioco">
+                    <img src="./../images/Wireframes/Videogioco.png" class="d-block w-100" alt="Wireframe Videogioco">
                 </div>
                 <div class="carousel-item">
                     <h4 class="mb-3">Anime</h4>
-                    <img src="../../images/Wireframes/Anime.png" class="d-block w-100" alt="Wireframe Anime">
+                    <img src="./../images/Wireframes/Anime.png" class="d-block w-100" alt="Wireframe Anime">
                 </div>
                 <div class="carousel-item">
                     <h4 class="mb-3">Personaggi</h4>
-                    <img src="../../images/Wireframes/Personaggi.png" class="d-block w-100" alt="Wireframe Personaggi">
+                    <img src="./../images/Wireframes/Personaggi.png" class="d-block w-100" alt="Wireframe Personaggi">
                 </div>
                 <div class="carousel-item">
                     <h4 class="mb-3">Accesso</h4>
-                    <img src="../../images/Wireframes/Accesso.png" class="d-block w-100" alt="Wireframe Accesso">
+                    <img src="./../images/Wireframes/Accesso.png" class="d-block w-100" alt="Wireframe Accesso">
                 </div>
             </div>
 
