--- a/pages/personaggi.html
+++ b/pages/personaggi.html
@@ -165,7 +165,7 @@
                 <!-- Card Cell -->
                 <div class="col">
                     <div class="card h-100 border-danger">
-                        <img src="./../images/personaggi/cell.png" class="card-img-top" alt="Cell">
+                        <img src="./../images/personaggi/Cell.png" class="card-img-top" alt="Cell">
                         <div class="card-body">
                             <h5 class="card-title">Cell</h5>
                             <p class="card-text">Un bioandroide creato per essere perfetto, una minaccia senza pari.</p>
